--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">lab4</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="enterpassword">Enter Password</string>
+    <string name="reenterpassword">"Re Enter Password "</string>
+    <string name="submit">"Submit "</string>
+    <string name="cancel">Cancel</string>
 </resources>
